[gd_scene load_steps=2 format=3 uid="uid://lobby_panel001"]

[ext_resource type="Script" path="res://scripts/ui/lobby_panel.gd" id="1"]

[node name="LobbyPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "X"

[node name="LobbyStatus" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 16
text = "Browse lobbies or host your own game"
horizontal_alignment = 1

[node name="LobbyBrowserPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 600.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="LobbyBrowserPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Available Lobbies"
horizontal_alignment = 1

[node name="LobbyBrowser" type="ScrollContainer" parent="LobbyBrowserPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 350.0

[node name="List" type="VBoxContainer" parent="LobbyBrowserPanel/LobbyBrowser"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="FriendPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="FriendPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Friends Online"
horizontal_alignment = 1

[node name="FriendList" type="ScrollContainer" parent="FriendPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 50.0
offset_right = 540.0
offset_bottom = 350.0

[node name="List" type="VBoxContainer" parent="FriendPanel/FriendList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="LobbyRoomPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="LobbyRoomPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Lobby"
horizontal_alignment = 1

[node name="PlayerList" type="ScrollContainer" parent="LobbyRoomPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 50.0
offset_right = 580.0
offset_bottom = 300.0

[node name="List" type="VBoxContainer" parent="LobbyRoomPanel/PlayerList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -80.0
offset_right = -200.0
offset_bottom = -20.0
alignment = 1
theme_override_constants/separation = 20

[node name="HostButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "JOIN"

[node name="RefreshButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "REFRESH"

[node name="StartButton" type="Button" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "START GAME"

[node name="ReadyButton" type="Button" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "READY"

[node name="LeaveButton" type="Button" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "LEAVE"

[node name="InviteButton" type="Button" parent="Buttons"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "INVITE"
